examples/invalid_modules/duplicate_global_symbol/src/shared/alpha.argx
module shared.alpha

type Ping { content: string }
